[package]
name = "optionscraper"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP + JSON
reqwest = { version = "0.12", features = ["blocking", "json", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time & timezone
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Parsing helpers
regex = "1"

# Already used in riskfreerate_lib.rs
quick-xml = "0.31"
once_cell = "1"
thiserror = "1"
bytes = "1"
        

[lib]
# This creates a true library target you can reuse from other apps
name = "riskfreerate"               # crate name you'll `use` from main/optionscraper
path = "src/riskfreerate_lib.rs"

[[bin]]
name = "optionscraper"              # the binary name (cargo run -q)
path = "src/main.rs"